# r2flutch

./: .gitignore  .pylintrc  MANIFEST.in  README.md  config.json.example  config.py  install.sh  notes.md  r2flutch.py  requirements.txt  run_tests.sh  setup.cfg  setup.py  tox.ini
agent/: plugin.js
r2flutch/: .gitignore  config.py  device.py  io.py  main.py  r2flutch.py  r2frida.py  repl.py  ssh.py  utils.py
r2flutch/agent/: _agent.js  package.json  plugin.ts  r2frida.d.ts
requirements/: build.txt  dist.txt  test.txt
test/: test_config.py  test_device.py  test_io.py  test_r2frida.py  test_repl.py  test_run.py  test_ssh.py  test_utils.py
