[metadata]
license_file = LICENSE
name = r2flutch
author = murphy
author_email = me@0xmurphy.me
description = allows to decrypt iOS applications using r2frida (radare2 and Frida)
long_description = file:README.md
long_description_content_type = text/markdown
url = https://www.0xmurphy.me/
project_urls =
    Source = https://github.com/as0ler/r2flutch
    Documentation = https://github.com/as0ler/r2flutch
classifiers =
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    License :: OSI Approved
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    r2flutch
    r2flutch.bin
include_package_data = True
package_dir =
  = .
python_requires = >=3.6

[entry_points]
console_scripts =
    r2flutch = r2flutch.bin.run:main
